this is the final commit

--- a/flower-web-portfoflo/style.css
+++ b/flower-web-portfoflo/style.css
@@ -221,3 +221,66 @@ width: 753px;
 height: 423.13px;
 border-radius: 20px;
 }
+
+/* footer related style */
+  .footer-first{
+    background-image: url(./assets/news-letter-bg.png);
+    width: 1330px;
+height: 533px;
+display: flex;
+flex-direction: column;
+justify-content: center;
+text-align: center;
+
+ 
+  }
+  .design-form{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   background: none;
+  }
+  .bsa{
+    background: none;
+    color: white;
+    font-size: 60;
+    font-weight: 800px;
+  }
+  div form{
+    background: none;
+    margin: 10px 30px;
+    border: none;
+  }
+ 
+ .btn2{
+    color: white;
+    background-color: rgba(233, 90, 8, 1);
+    padding: 10px 20px;
+    border: none;
+ }
+
+ 
+ .last-design{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 15px;
+
+ }
+ .foot-para{
+    width: 300px;
+    height: 75px;
+ }
+ .icon {
+    gap: 10px;
+ }
+ div ul li{
+    list-style: none;
+    margin-top: 25px;
+
+ }
+ 
+ .icon img{
+    height: 26px;
+    width: 26px;
+    margin-right: 7px;
+ }
